--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,11 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.4.0"
     implementation "androidx.core:core-ktx:1.3.0"
     implementation "com.squareup.okhttp3:okhttp:4.7.2"
+    //glide Image loading
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+
+
 
 
 
